<resources>
    <string name="app_name">TaskManager</string>
    <string name="sign_out">sign out</string>
    <string name="sign_in">Sign In</string>
    <string name="email_mail_com">email@mail.com</string>
    <string name="not_autorizated">not autorizated</string>
    <string name="password">password</string>
    <string name="sign_up">sign Up</string>
    <string name="sign_out_b">sign OUT</string>
    <string name="registration">registration</string>
    <string name="sign_signin_or_register">SignIn or register</string>
    <string name="sign_signout_text">You entered like , %s</string>
    <string name="sign_email">e-mail</string>
    <string name="tip_input_right_data">input right data</string>
    <string name="description_icon_of_goal">icon of goal</string>
    <string name="item_progress">progress</string>
    <string name="create">create</string>
    <string name="is_cycle">is cycle</string>
    <string name="to_task">to TASK</string>
    <string name="to_goal">to GOAL</string>
    <string name="to_step">to STEP</string>
    <string name="start_it">START</string>
    <string name="done_it">DONE</string>
    <string name="description_icon_of_step">description of the step</string>
    <string name="dateFormatterForItems">dd.MM.yyyy</string>
    <string name="dateFormatterForCloseDate">dd-MMM-yyyy</string>
    <string name="add_new_item">add new item</string>
    <string name="percentage">Progress $s %</string>
    <string name="to_goals_element">To Goal\'s Elements</string>
    <string name="to_free_elements">to free elements</string>
    <string name="unpin">unpin</string>
    <string name="attach">attach To</string>
    <string name="to_steps_element">to steps elements</string>
    <string name="not_attached">not attached</string>
    <string name="tasks_image_description">tasks image</string>
    <string name="status_in_progress">Status: in progress</string>
    <string name="status_not_started">Status: not started</string>
    <string name="status_done">Status: done</string>
    <string name="idea_image_description">idea image description</string>
    <string name="convert_to">Convert to</string>
    <string name="image_button_description">image button</string>
    <string name="attach_to">Attach to</string>
    <string name="attached">attached</string>
    <string name="description">Description:</string>
    <string name="close_before">Close before:</string>
    <string name="information_about">Information about:</string>
    <string name="elements">Its Elements</string>
    <string name="attached_to">Attached to:</string>
    <string name="cycling">Cycling:</string>
    <string name="progres_00">Progress, %d</string>
    <string name="free_elements">List of elements for connection</string>
    <string name="its_elements">Elements of Item</string>
    <string name="Search">search</string>
    <string name="goal">Goal</string>
    <string name="step">Step</string>
    <string name="task">Task</string>
    <string name="close_date">Close date:</string>
    <string name="name_of_issue">Name of issue:</string>
    <string name="idea">Idea</string>
    <string name="key">Key</string>
    <string name="input_name_of_item">input name of item</string>
    <string name="input_description_of_item">input description of item</string>
    <string name="field_name_must_be_not_empty">Field name must be not empty</string>
    <string name="save">save</string>
    <string name="open_date">Open date</string>
    <string name="data_refreshed">Data refreshed</string>
    <string name="ok">OK</string>
    <string name="isdone">is Done</string>
    <string name="isfailed">is Failed</string>
    <string name="isstarted">is Started</string>
    <string name="today">today</string>
    <string name="any_period">any</string>
    <string name="on_week">on week</string>
    <string name="om_month">om month</string>
    <string name="progress_point_description">Point of progress</string>
    <string name="fragment_item_image">item image</string>
    <string name="cancel">cancel</string>
    <string name="theme">Theme:</string>
    <string name="language">Language:</string>
    <string name="user">User mail:</string>
    <string name="lime">Lime</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="english">English</string>
    <string name="russian_language">Русский</string>
    <string name="setting_header">Settings</string>
    <string name="settings">settings</string>
    <string name="create_new">Create new object</string>
    <string name="instance_not_created">new instance is not created</string>
    <string name="instance_created">new instance is created</string>
    <string name="sync_data">Sync data</string>
    <string name="remind_time">Remind time:</string>
    <string name="you_have_do">you have do %d task(s) for today</string>
    <string name="sync_way">Sync data:</string>
    <string name="auto">auto</string>

    <string-array name="cycle">
        <item>not cycle</item>
        <item>once an hour</item>
        <item>once a day</item>
        <item>once a week</item>
        <item>once a month</item>
        <item>once an year</item>
    </string-array>
</resources>