<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/item_fr_common_data"
        style="@style/ItemFragment.Header2"
        android:textAlignment="center"
        android:text="@string/information_about"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_fr_description_header"
        style="@style/ItemFragment.Header2"
        android:text="@string/description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_fr_common_data" />

    <TextView
        android:id="@+id/item_fr_description_content"
        style="@style/ItemFragment.OtherText"
        app:layout_constraintLeft_toRightOf="@id/item_fr_description_header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_fr_description_header"
        tools:text="description of some goal, description of some goal, description of some goal," />

    <TextView
        android:id="@+id/item_fr_close_date_header"
        style="@style/ItemFragment.Header2"
        android:text="@string/close_before"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_fr_description_content" />

    <TextView
        android:id="@+id/item_fr_close_date_content"
        style="@style/ItemFragment.OtherText"
        app:layout_constraintLeft_toRightOf="@id/item_fr_description_header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_fr_close_date_header"
        tools:text="must finish to: 20 Mar 2021" />

    <TextView
        android:id="@+id/item_fr_cycle_header"
        style="@style/ItemFragment.Header2"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_fr_close_date_content"
        android:text="@string/cycling" />

    <TextView
        android:id="@+id/item_fr_cycle_content"
        style="@style/ItemFragment.OtherText"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@id/item_fr_description_header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_fr_cycle_header"
        tools:text="one a week" />

    <TextView
        android:id="@+id/item_fr_relative_header"
        style="@style/ItemFragment.Header2"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_fr_cycle_content"
        android:text="@string/attached_to" />

    <TextView
        android:id="@+id/item_fr_relative_owner"
        style="@style/ItemFragment.OtherText"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@id/item_fr_description_header"
        app:layout_constraintTop_toTopOf="@id/item_fr_relative_header"
        tools:text="@string/not_attached" />

    <ImageButton
        android:id="@+id/item_fr_relative_button"
        style="@style/ItemFragment.Button.Relative"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_fr_relative_owner"
        app:layout_constraintBottom_toBottomOf="@id/item_fr_relative_owner"
        android:contentDescription="@string/image_button_description" />
</androidx.constraintlayout.widget.ConstraintLayout>