<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Creator.Fragment">

    <EditText
        android:id="@+id/creator_name"
        style="@style/Creator.Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/creator_description"
        style="@style/Creator.Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creator_name"
        app:layout_constraintBottom_toTopOf="@id/creator_group"/>

    <RadioGroup
        android:id="@+id/creator_group"
        style="@style/Converter.RadioGroup"
        android:checkedButton="@id/creator_idea_radio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creator_description"
        app:layout_constraintBottom_toTopOf="@id/creator_close_date">

        <RadioButton
            android:id="@+id/creator_idea_radio"
            style="@style/Converter.RadioItem"
            android:text="@string/idea" />

        <RadioButton
            android:id="@+id/creator_task_radio"
            style="@style/Converter.RadioItem"
            android:text="@string/task" />

        <RadioButton
            android:id="@+id/creator_step_radio"
            style="@style/Converter.RadioItem"
            android:text="@string/step" />

        <RadioButton
            android:id="@+id/creator_key_radio"
            style="@style/Converter.RadioItem"
            android:text="@string/key" />

        <RadioButton
            android:id="@+id/creator_goal_radio"
            style="@style/Converter.RadioItem"
            android:text="@string/goal" />

    </RadioGroup>

    <TextView
        android:id="@+id/creator_close_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/close_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creator_group"
        app:layout_constraintBottom_toTopOf="@id/creator_is_cycle_checkbox"/>

    <TextView
        android:id="@+id/creator_close_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:enabled="false"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/creator_close_date"
        app:layout_constraintTop_toTopOf="@+id/creator_close_date"
        tools:text="15 Oct 2020" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/creator_is_cycle_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/is_cycle"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/creator_cycle_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creator_close_date"
        app:layout_constraintBottom_toBottomOf="@id/creator_button_create"/>

    <Spinner
        android:id="@+id/creator_cycle_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/creator_is_cycle_checkbox"
        app:layout_constraintTop_toTopOf="@+id/creator_is_cycle_checkbox" />

    <Button
        android:id="@+id/creator_button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creator_is_cycle_checkbox" />


</androidx.constraintlayout.widget.ConstraintLayout>